--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,13 +1,13 @@
 .places {
   width: calc(100% - (19px * 2));
-  max-width: 320px;
+  max-width: 345px;
 
   font-size: 0;
 
   margin: 0 auto;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 425px) {
   .places {
     width: calc(100% - (40px * 2));
     max-width: 824px;
