--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -55,7 +55,7 @@
   -o-transition: opacity .2s ease-in;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 425px) {
   .profile__add-button {
     max-width: 150px;
   }
