--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,6 +3,11 @@
   font-size: clamp(14px, 2.5vw, 18px);
   line-height: clamp(17px, 3.5vw, 22px);
   text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+  grid-column: 1 / -1;
 
   margin: 0;
 }
@@ -10,7 +15,5 @@
 @media (min-width: 768px) {
   .profile__description {
     text-align: left;
-
-    grid-column: 1 / -1;
   }
 }
